# tekton

./: .gitignore  HOW_TO_ADD_NEW_SERVICE.md  Makefile  README.md  VISION.md  deploy.sh  server-setup.sh  setup.env.example  setup.sh  update-server-config.sh
.claude/skills/create-microvm/: SKILL.md
.github/workflows/: ci.yml
dashboard/: DEPLOY.md  deploy.sh  setup.sh
dashboard/backend/: Cargo.toml
dashboard/backend/scripts/: collect_file_changes.py
dashboard/backend/src/: audit.rs  auth.rs  autoresearch.rs  benchmark_servers.rs  config.rs  cost.rs  db.rs  error.rs  expb.rs  intake.rs  intake_admin.rs  main.rs  metrics.rs  models.rs  policies.rs  pool.rs  previews.rs  public_config.rs  secrets.rs  settings.rs  shell.rs  tasks.rs  webhooks.rs  ws.rs
dashboard/frontend/: .gitignore  .nycrc.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dashboard/frontend/e2e/: activity-sidebar.spec.ts  (+28 more)
docs/: adding-a-new-service.md  architecture.md  deployment-guide.md  e2e-testing.md  preview-deployments.md  roadmap-tracker.md  state-transitions.md
example_service/: app.py  preview-config.nix
initial-install/: configuration.nix  disk-config.nix  flake.nix
scripts/: deploy-vm.sh
server-config/: agent-config.nix  agent.sh  configuration.nix  flake.nix  microvm-agent.nix  microvm-host.nix  preview-config.nix  preview.sh  tekton-services.nix  vertex-preview-config.nix
server-config/lib/: mkMicrovm.nix
server-config/orchestrator/: package.json
server-config/preview-webhook/: package-lock.json  package.json
(+52 files in other folders)
